I think I should start writing poems here. Next commit message will be the first line.

--- a/l3/report.tex
+++ b/l3/report.tex
@@ -263,9 +263,9 @@ Metoda bisekcji zdaje się być najbardziej niezawodna, jednak wymaga znalezieni
 Metoda siecznych zwraca najdokładniejsze wyniki, jednak wybranie odpowiednich wartości startowych wymaga odpowiedniej analizy.
 Również w przypadku metody Newtona wyniki są zależne od wartości poczatkowej i istnieją dane, dla których metoda może zwracać błędne wyniki.
 
-Powyższe algorytmy wykazują wysoką skuteczność w powierzonych zadaniach jednak istnieje duże ryzyko błędu.
+Powyższe algorytmy wykazują wysoką skuteczność w powierzonych zadaniach jednak bez odpowiedniej analizy istnieje duże ryzyko błędu.
 
-W krytycznych przypadkach konieczne jest dogłębna wstępna analiza problemu i porównanie wyniku działania wszystkich metod.
+Poszczególne metody narażone są na różne błędy, zatem w celu wyeliminowania ryzyka w krytycznych przypadkach, poza przeanalizowaniem problemu, warto porównać wyniki działania wszystkich algorytmów.
 
 
 
